[package]
name = "deterministic-online-coop-experiment"
version = "0.1.0"
authors = ["Nguyễn Đức Long <duclong120995@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
debug = 1
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1

[dependencies]
bevy = "*"
bevy_egui = "*"
bevy_rapier3d = { git = "https://github.com/dimforge/bevy_rapier", branch = "joint_removal", features = ["enhanced-determinism", "serde-serialize"] }
rand = "*"
rand_pcg = "*"
