[package]
name = "deterministic-online-coop-experiment"
version = "0.1.0"
authors = ["Nguyễn Đức Long <duclong120995@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
debug = 1
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1

[dependencies]
bevy = "0.5"
bevy_easings = "*"
bevy_egui = "0.5"
bevy_rapier3d = { git = "https://github.com/dimforge/bevy_rapier", features = ["enhanced-determinism", "serde-serialize"] }
bevy-inspector-egui = "*"
bitflags = "*"
fake = "*"
futures = "*"
libp2p = { version = "*", default-features = false, features = [
    "deflate",
    "dns-async-std",
    "floodsub",
    "identify",
    "kad",
    "gossipsub",
    "mdns",
    "mplex",
    "noise",
    "ping",
    "plaintext",
    "pnet",
    "relay",
    "request-response",
    "secp256k1",
    "tcp-async-io",
    "uds",
    "websocket",
    "yamux",
]}
rand = "*"
rand_pcg = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
